--- a/mu-template/trunk/after/template/sh/if.template
+++ b/mu-template/trunk/after/template/sh/if.template
@@ -6,6 +6,7 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
+VimL: let s:reindent     = 1
 if [ ¡s:Surround(2, '<+cond+>')¡ ] ; then
     ¡s:Surround(1, '<+code+>')¡
 fi
