--- a/mu-template/trunk/after/template/license/copying.template
+++ b/mu-template/trunk/after/template/license/copying.template
@@ -1,13 +1,13 @@
 VimL:" $Id$
 VimL:" COPYING File Template, Luc Hermitte, 30th Sep 2013
-VimL:" hint: Licence file skeleton
+VimL:" hint: License file skeleton
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL:" 
-VimL:" We search for all full licenses installed in mu-template license/ directories
+VimL:" We search for all full licenses installed in mu-template license/text directories
 VimL:" and ask the use to choose one.
-VimL: let s:_licenses = map(lh#mut#dirs#get_short_list_of_TF_matching('*-full', 'license'), 'substitute(v:val, "^license[/\\\\]", "", "")')
-VimL: echomsg string(s:_licenses)
+VimL: let s:_licenses = map(lh#mut#dirs#get_short_list_of_TF_matching('*-full', 'license/text'), 'substitute(v:val, "^license[/\\\\]text[/\\\\]", "", "")')
+VimL: " echomsg string(s:_licenses)
 MuT:  if len(s:_licenses) == 1
 VimL:    let s:_license = s:_licenses[0]
 MuT:  else
@@ -17,4 +17,4 @@ VimL:    " check choice > 1
 VimL:    let s:_license = s:_licenses[s:_choice - 2]
 MuT:  endif
 VimL: echomsg string(s:_license)
-VimL: call s:Include(s:_license, 'license')
+VimL: call s:Include(s:_license, 'license/text')
