--- a/cpp/trunk/after/template/cpp/enum2.template
+++ b/cpp/trunk/after/template/cpp/enum2.template
@@ -24,7 +24,7 @@ VimL: let s:to_internal = lh#dev#naming#function("to_internal")
 VimL: let s:max         = lh#dev#naming#function("max")
 VimL: let s:type        = lh#dev#naming#type("type")
 VimL: call s:AddPostExpandCallback('lh#cpp#include#add("<string>")')
-MuT:  if lh#dev#cpp#use_cpp11()
+MuT:  if lh#cpp#use_cpp11()
 VimL:   call s:AddPostExpandCallback('lh#cpp#include#add("<cstdint>")')
 MuT:  else
 VimL:   call s:AddPostExpandCallback('lh#cpp#include#add("<stdint.h>")')
@@ -51,7 +51,7 @@ VimL: call s:Include("formatted-comment", "cpp/internals", s:doc)
 struct <+s:enum_name+> {
     enum <+s:type+> { <+join(s:values, ', ')+>, MAX__, UNDEFINED__, FIRST__=0 };
 
-MuT:  if lh#dev#cpp#use_cpp11()
+MuT:  if lh#cpp#use_cpp11()
     explicit <+s:enum_name+>(std::uint8_t <+s:value_+>)
 MuT:  else
     explicit <+s:enum_name+>(uint8_t <+s:value_+>)
@@ -83,7 +83,7 @@ MuT:  if s:iterable
 MuT:  endif
 
     char const* <+s:to_string+>() const;
-MuT:  if lh#dev#cpp#use_cpp11()
+MuT:  if lh#cpp#use_cpp11()
     explicit operator int() const { <s:m_value+>; }
 MuT:  endif
     <+s:type+> <+s:to_internal+>() const { return <+s:m_value+>; }
@@ -101,7 +101,7 @@ MuT:  if s:iterable
     static <+s:enum_name+> begin() { return FIRST__; }
     static <+s:enum_name+> end  () { return <+s:enum_name+>(build_max()); }
 
-MuT:      if lh#dev#cpp#use_cpp11()
+MuT:      if lh#cpp#use_cpp11()
           /** Helper class to provide for-range loops on <+s:enum_name+>.
            * @see \c range()
            */
@@ -122,7 +122,7 @@ private:
 
     <+s:type+> <+s:m_value+>;
 };
-MuT:  if s:iterable && lh#dev#cpp#use_cpp11()
+MuT:  if s:iterable && lh#cpp#use_cpp11()
 
           struct <+s:enum_name+>::<+s:RangeType+> {
               struct iterator {
