--- a/cpp/trunk/after/template/cpp/shared_ptr.template
+++ b/cpp/trunk/after/template/cpp/shared_ptr.template
@@ -5,7 +5,7 @@ VimL: let s:value_start = '¡'
 VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
-MuT:  if lh#dev#cpp#use_cpp11()
+MuT:  if lh#cpp#use_cpp11()
 VimL:    call s:AddPostExpandCallback('lh#cpp#include#add("<memory>")')
 std::shared_ptr<¡s:Surround(1, '<+type+>')¡> <++>
 MuT:  else
