- lh-cpp: cpp/string snippet fixed

--- a/cpp/trunk/after/template/cpp/string.template
+++ b/cpp/trunk/after/template/cpp/string.template
@@ -6,4 +6,4 @@ VimL: let s:value_end   = s:value_start
 VimL: let s:marker_open  = '<+'
 VimL: let s:marker_close = '+>'
 VimL: call s:AddPostExpandCallback('lh#cpp#include#add("<string>")')
-std::string<¡s:Surround(1, '<+type+>')¡> <++>
+std::string<++>
