- mu-template: new template (docbk/chapter) + template fix (vim autoload plugin)

--- a/mu-template/trunk/after/template/vim/internals/vim-autoload-debug.template
+++ b/mu-template/trunk/after/template/vim/internals/vim-autoload-debug.template
@@ -11,7 +11,9 @@ function! ¡s:function_prefix¡version()
 endfunction
 
 " # Debug   {{{2
-let s:verbose = 0
+if !exists('s:verbose')
+  let s:verbose = 0
+endif
 function! ¡s:function_prefix¡verbose(...)
   if a:0 > 0 | let s:verbose = a:1 | endif
   return s:verbose
